[tool.poetry]
name = "model_trainer"
version = "0.2.3"
description = "A wrapper over PyTorch training loop"
license = "GPL-3.0-or-later"
authors = ["Nikolas Pitsillos <n.pitsillos.2@research.gla.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
torchvision = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
